@@ -1,3 +1,4 @@
+* Login Logout: fix time format representation for time in calls.
 * Dialer (ECCP): fixed bug that prevented the hold/schedulecall/transfercall
   requirements from working after agent entered a pause while still connected
   to a call.
